--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -149,11 +149,11 @@
       width: 47%
    .calc2__flex
       width: 100%
-      flex-direction: column-reverse
+      flex-direction: column
    .calc2__flex p
       text-align: center
       margin-left: 0
-      margin-bottom: 15px
+      margin-top: 15px
    .calc2 .calc__form button
       width: 100%
    .rev__arrows
@@ -177,11 +177,11 @@
    .nav__box
       justify-content: flex-start
    .header__flex
-      flex-direction: column-reverse
+      flex-direction: column
    .header__flex a
       margin-right: 0
       width: 100% 
-      margin-top: 15px
+      margin-bottom: 15px
    .popup
       width: 95%
       height: auto
@@ -305,6 +305,8 @@
    .calc__form input
       margin-right: 0
       height: 60px
+   .calc3__item:nth-child(n+3)
+      margin-bottom: 40px
 @media screen and (max-width: 576px)
    button:active, button:focus 
       outline: none
@@ -406,3 +408,12 @@
       margin-top: 20px
    .footer__block .nav__socials
       margin-bottom: 20px
+   .why__item
+      &_1 
+         order: 3
+      &_2
+         order: 2
+   .why__pic
+      order: 1
+   .why
+      padding-bottom: 60px
